# Safron

./: .gitignore  CMakeLists.txt  README.md
.github/: FUNDING.yml
.github/workflows/: build.yml  makefile.yml
include/: admin_access.hpp  package_manager.hpp
src/: admin_access.cpp  build_manager.cpp  config_manager.cpp  main.cpp  package_manager.cpp
